# certbot-dns-zoneedit

./: .gitignore  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  certbot_dns_zoneedit.py  dev-install.sh  dry-run.sh  gcloud-configure.sh  pyproject.toml  readthedocs.org.requirements.txt  requirements.txt  setup.py  wet-run.sh  zoneedit.ini
certbot_dns_zoneedit/: __init__.py
certbot_dns_zoneedit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
certbot_dns_zoneedit/_internal/: __init__.py  dns_zoneedit.py
certbot_dns_zoneedit/_internal/tests/: __init__.py  dns_zoneedit_test.py
dns_zoneedit/: dns_zoneedit.py  dns_zoneedit.sh
docs/: Makefile  api.rst  conf.py  index.rst  make.bat
snap/: snapcraft.yaml
